transf_juliabox beta

--- a/mandelbulber2/formula/ui/transf_spherical_inv_v4.ui
+++ b/mandelbulber2/formula/ui/transf_spherical_inv_v4.ui
@@ -272,18 +272,97 @@ offset:</string>
         <property name="spacing">
          <number>2</number>
         </property>
-        <item row="4" column="1">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledx_false">
+        <item row="6" column="1">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledA_false">
           <property name="text">
            <string>Mode 2</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="2">
-         <widget class="QLabel" name="label_22">
+        <item row="10" column="1">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledE_false">
           <property name="text">
-           <string>if (  minRR  &lt; rr &lt; maxRR)  z *=1 / rr;
-if ( z &gt; minRR) z *= 1/  rrMode</string>
+           <string>E</string>
+          </property>
+         </widget>
+        </item>
+        <item row="7" column="1">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledB_false">
+          <property name="text">
+           <string>Mode 3</string>
+          </property>
+         </widget>
+        </item>
+        <item row="10" column="2">
+         <widget class="MyDoubleSpinBox" name="spinbox_transf_scaleA_1">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="prefix">
+           <string/>
+          </property>
+          <property name="suffix">
+           <string/>
+          </property>
+          <property name="decimals">
+           <number>6</number>
+          </property>
+          <property name="minimum">
+           <double>-100000.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>100000.000000000000000</double>
+          </property>
+          <property name="singleStep">
+           <double>0.100000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="1">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
+          <property name="text">
+           <string>Mode 1</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLabel" name="label_23">
+          <property name="text">
+           <string>Mode condition</string>
+          </property>
+         </widget>
+        </item>
+        <item row="9" column="1">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledD_false">
+          <property name="text">
+           <string>Mode 5</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLabel" name="label_47">
+          <property name="text">
+           <string>minRR:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="8" column="1">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledC_false">
+          <property name="text">
+           <string>Mode 4</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="2">
+         <widget class="QLabel" name="label_48">
+          <property name="text">
+           <string>rrModeB = 2 * minRR - rr (non conformal &quot;reversal&quot; inversion)</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
@@ -315,17 +394,28 @@ if ( z &gt; minRR) z *= 1/  rrMode</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="QLabel" name="label_47">
+        <item row="4" column="1">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledx_false">
           <property name="text">
-           <string>minRR:</string>
+           <string>rrModeB</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="1">
-         <widget class="QLabel" name="label_23">
+        <item row="3" column="2">
+         <widget class="QLabel" name="label_21">
           <property name="text">
-           <string>Mode condition</string>
+           <string>rrModeA = minRR (conformal - undo the inversion inside a sphere)</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QLabel" name="label_22">
+          <property name="text">
+           <string>if (  minRR  &lt; rr &lt; maxRR)  z *=1 / rr;
+if ( z &gt; minRR) z *= 1/  rrMode</string>
           </property>
          </widget>
         </item>
@@ -357,37 +447,31 @@ if ( z &gt; minRR) z *= 1/  rrMode</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="2">
-         <widget class="QLabel" name="label_21">
-          <property name="text">
-           <string>rrModeA = minRR (conformal - undo the inversion inside a sphere)</string>
-          </property>
-          <property name="wordWrap">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
         <item row="2" column="1">
          <widget class="QLabel" name="label_16">
           <property name="text">
-           <string>maxRR:</string>
+           <string>max:</string>
           </property>
          </widget>
         </item>
-        <item row="4" column="2">
-         <widget class="QLabel" name="label_48">
+        <item row="9" column="2">
+         <widget class="QLabel" name="label_20">
           <property name="text">
-           <string>rrModeB = 2 * minRR - rr (non conformal &quot;reversal&quot; inversion)</string>
-          </property>
-          <property name="wordWrap">
-           <bool>true</bool>
+           <string>rr &gt; minRR</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="1">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
+        <item row="5" column="2">
+         <widget class="QLabel" name="label_24">
           <property name="text">
-           <string>Mode 1</string>
+           <string>rr &lt;</string>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="2">
+         <widget class="QLabel" name="label_25">
+          <property name="text">
+           <string>rr &lt; maxRR</string>
           </property>
          </widget>
         </item>
